--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^5.0.3
   file_picker: ^5.2.6
+  flutter_downloader: ^1.10.2
+  path_provider: ^2.0.14
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
