--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_downloader: ^1.10.2
   path_provider: ^2.0.14
   permission_handler: ^10.2.0
+  fluttertoast: ^8.2.1
 
 dev_dependencies:
   flutter_test:
